# drf-questionnaire-editor

./: .env.example  docker-compose.yml  pyproject.toml
core/: settings.py  urls.py
surveys/: admin.py  models.py  urls.py  views.py
surveys/factories/: survey.py
surveys/migrations/: 0001_initial.py  0002_alter_link_answer.py
surveys/repositories/: link.py  survey.py
surveys/serializers/: answer.py  link.py  question.py  survey.py
surveys/services/: crud.py  link.py  survey.py
surveys/views/: link.py  survey.py
